manifest/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_HOST
              value: localhost
            - name: MONGO_INITDB_DATABASE
              value: server
          image: mongo
          name: mongo
          ports:
            - containerPort: 27017
          resources: {
            requests: {
              cpu: 50m,
              memory: 128Mi
            },
            limits: {
              cpu: 5000m,
              memory: 4Gi
            }
          }
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim
      restartPolicy: Always
      volumes:
        - name: mongo-claim
          persistentVolumeClaim:
            claimName: mongo-claim
status: {}
