manifest/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: server
  name: server
spec:
  replicas: 3
  selector:
    matchLabels:
      service: server
  strategy: {}
  template:
    metadata:
      labels:
        service: server
    spec:
      containers:
        - env:
            - name: MONGODB_HOST
              value: mongodb://mongo
            - name: MONGODB_PORT
              value: "27017"
            - name: PORT
              value: "5000"
          image: server
          name: server
          ports:
            - containerPort: 5000
          resources: {
            limits: {
              cpu: 500m,
              memory: 512Mi
            # },
            # requests: {
            #   cpu: 250m,
            #   memory: 256Mi
            }
          }
      restartPolicy: Always
status: {}
