manifest/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongo-service
  name: mongo-service
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    service: mongo
status:
  loadBalancer: {}
