manifest/server-exposer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: server-exposer
  name: server-exposer
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    service: server
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: lindria
