manifest/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: server-service
  name: server-service
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    service: server
status:
  loadBalancer: {}
