manifest/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
spec:
  rules:
  - host: izzu.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 5000
  # tls:
  # - hosts:
  #   - izzu.me
  #   secretName: izzu.me-tls
